# eigen-node

./: .gitignore  Cargo.toml  README.md  index.js  package.json
.github/workflows/: ci.yml
circuits/: zktx.circom
client/: tx.js
scritps/: generate_zktx.js  zkit_zktx.sh
src/: account.rs  baby_step_giant_step.rs  errors.rs  fr.rs  hash.rs  lib.rs  range_proof_bm.rs  range_proof_bp.rs  schnorr.rs  signed_integer.rs  transaction.rs  twisted_elgamal.rs  utils.rs
src/zkp/: all.rs  and.rs  babyjubjub.rs  eq.rs  eq_proof.rs  fiat_shamir.rs  mod.rs  or.rs  sigma.rs  transcript.rs  transfer_proof.rs
test/: zktx.test.js
