[package]
name = "eigen-node"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version="0.6", default-features=false, features = ["getrandom"]}
rand = { version = "0.8" }
lazy_static = "1.4"
thiserror="1.0"
poseidon-rs = "0.0.8"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = {version = "0.2.2", features = ["rand"]}
num-traits = "0.2.8"
babyjubjub-rs = { git = "https://github.com/0xEigenLabs/babyjubjub-rs", version = "0.0.8" }
generic-array = "0.14"
typenum = "1.15"
digest = "0.9.0"
rand_chacha = "0.3"

zklib = { git = "https://github.com/0xEigenLabs/eigen-zkit" }
web3 = "0.17.0"

[dev-dependencies]
proptest = "1"

[features]
default = []
bench = []
